sub/65/build.log
Main.cpp: In function 'int main()':
Main.cpp:45:5: error: 'cour' was not declared in this scope
     cour << "Wrong Answer" << endl;
     ^
